--- a/question4/src/main/res/layout/listlayout.xml
+++ b/question4/src/main/res/layout/listlayout.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_marginTop="7dp"
-    android:layout_marginLeft="7dp"
     android:layout_marginBottom="7dp"
-    android:layout_marginRight="7dp"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -14,26 +11,34 @@
 
         <TextView
             android:id="@+id/id"
+            android:layout_weight="1"
+            android:text="ID"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp" />
 
         <TextView
             android:id="@+id/name"
+            android:text="Name"
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp" />
 
         <TextView
             android:id="@+id/attack"
+            android:text="Attack"
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp" />
 
         <TextView
             android:id="@+id/defense"
+            android:text="Dedense"
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="7dp" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
