--- a/question2/src/main/res/layout/activity_main.xml
+++ b/question2/src/main/res/layout/activity_main.xml
@@ -13,13 +13,13 @@
         android:orientation="horizontal">
 
         <Button
-            android:ID="@+ID/camera"
+            android:id="@+id/camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/camera" />
 
         <Button
-            android:ID="@+ID/mergecamera"
+            android:id="@+id/mergecamera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/merge_bitmap" />
@@ -28,11 +28,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:orientation="horizontal">
 
         <ImageView
-            android:ID="@+ID/image1"
+           android:id="@+id/image1"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
@@ -40,7 +39,7 @@
             android:src="@mipmap/frame" />
 
         <ImageView
-            android:ID="@+ID/image2"
+            android:id="@+id/image2"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
@@ -48,7 +47,7 @@
             android:src="@mipmap/frame_film" />
 
         <ImageView
-            android:ID="@+ID/image3"
+            android:id="@+id/image3"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
@@ -56,7 +55,7 @@
             android:src="@mipmap/frame_flower" />
 
         <ImageView
-            android:ID="@+ID/image4"
+            android:id="@+id/image4"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
@@ -64,7 +63,7 @@
             android:src="@mipmap/frame_lace" />
 
         <ImageView
-            android:ID="@+ID/image5"
+            android:id="@+id/image5"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
